fixing sonarqube issues